--- a/portfolio/jupyter-notebook/kaggle-sleep_health.ipynb
+++ b/portfolio/jupyter-notebook/kaggle-sleep_health.ipynb
@@ -57,7 +57,7 @@
     "import pandas as pd\n",
     "from matplotlib.pyplot import subplots\n",
     "\n",
-    "data = pd.read_csv(r\"C:\\Users\\ACER\\OneDrive\\Desktop\\Assignments\\Portfolio\\kaggle-sleep_blood_pressure\\kaggle-dataset.csv\")"
+    "data = pd.read_csv(r\"kaggle-dataset.csv\")"
    ]
   },
   {
